WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
165215
IndexedDB: When doing puts, don't do deletes if there are no indexes
https://bugs.webkit.org/show_bug.cgi?id=165215
Summary
IndexedDB: When doing puts, don't do deletes if there are no indexes
Brady Eidson
Reported
2016-11-30 12:55:50 PST
IndexedDB: When doing puts, don't do deletes if there are no indexes It's important to "delete before put" to make sure indexes are in a consistent state. But if an object store has no indexes, we shouldn't bother doing the deletes first. This saves between 1% and 2% on a tight-insert loop.
Attachments
Patch v1
(4.92 KB, patch)
2016-11-30 12:59 PST
,
Brady Eidson
beidson
: review-
Details
Formatted Diff
Diff
PFL
(3.54 KB, patch)
2016-11-30 13:25 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-11-30 12:59:31 PST
Created
attachment 295745
[details]
Patch v1
Brady Eidson
Comment 2
2016-11-30 13:12:59 PST
Well, this patch goes ahead and fails tests, so, never mind.
Brady Eidson
Comment 3
2016-11-30 13:22:25 PST
I see the issue with half of this patch. RecordIDs in the table. There's also an issue of orphaned blobs. This might be worth revisiting in the future, but probably not now. I'll land the "good half" now, as it's still worthwhile.
Brady Eidson
Comment 4
2016-11-30 13:25:31 PST
Created
attachment 295749
[details]
PFL
WebKit Commit Bot
Comment 5
2016-11-30 14:46:10 PST
Comment on
attachment 295749
[details]
PFL Rejecting
attachment 295749
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 295749, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: /git.webkit.org/WebKit 0bc77eff..ec707a9 master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 209154 = 0bc77effebf4a1d87caf78b287e1348281916fc8
r209155
= ec707a9b4ab967b1a1b232f888e58a4d3dbab0fb Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output:
http://webkit-queues.webkit.org/results/2597527
WebKit Commit Bot
Comment 6
2016-11-30 18:42:49 PST
Comment on
attachment 295749
[details]
PFL Clearing flags on attachment: 295749 Committed
r209168
: <
http://trac.webkit.org/changeset/209168
>
WebKit Commit Bot
Comment 7
2016-11-30 18:42:52 PST
All reviewed patches have been landed. Closing bug.
Brady Eidson
Comment 8
2016-11-30 23:06:07 PST
Reverted
r209168
for reason: Caused 2 API tests to fail Committed
r209176
: <
http://trac.webkit.org/changeset/209176
>
Brady Eidson
Comment 9
2016-11-30 23:07:28 PST
(In reply to
comment #8
)
> Reverted
r209168
for reason: > > Caused 2 API tests to fail > > Committed
r209176
: <
http://trac.webkit.org/changeset/209176
>
In case we want to revisit this (some day...) exploration on the two failing tests is here:
https://bugs.webkit.org/show_bug.cgi?id=165242
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug