IndexedDB: When doing puts, don't "updateAllIndexesForAddRecord" if there are no indexes. https://bugs.webkit.org/show_bug.cgi?id=165215

Reviewed by Alex Christensen.

No new tests (No observable behavior change).

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::addRecord): Don't "updateAllIndexesForAddRecord" if there are no indexes.
  Avoiding this saved us some IDBKey serialization and Javascript object manipulation.


Canonical link: https://commits.webkit.org/182854@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209168 268f45cc-cd09-0410-ab3c-d52691b4dbfc